--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,18 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout the repository code
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Set up Java (update the version as per your project)
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
 
-    # Cache Gradle dependencies
     - name: Cache Gradle
       uses: actions/cache@v3
       with:
@@ -32,17 +29,20 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle
 
-    # Run tests
     - name: Run Tests
       run: ./gradlew test
 
-    # Build the distribution zip
     - name: Build Distribution
       run: ./gradlew distZip
 
-    # Upload the zip file as an artifact
+    - name: Debug: List build directory
+      run: ls -R kross/build
+
+    - name: Verify ZIP File
+      run: test -f kross/build/distributions/kross.zip || echo "ZIP file not found!"
+
     - name: Upload Distribution Artifact
       uses: actions/upload-artifact@v3
       with:
         name: distribution
-        path: build/distributions/*.zip
+        path: kross/build/distributions/kross.zip
