--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,39 +10,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      # Checkout the repository code
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up JDK
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      # Set up Java (update the version as per your project)
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    - name: Cache Gradle
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle
+      # Cache Gradle dependencies
+      - name: Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle
 
-    - name: Run Tests
-      run: ./gradlew test
+      # Run tests
+      - name: Run Tests
+        run: ./gradlew test
 
-    - name: Build Distribution
-      run: ./gradlew distZip
+      # Build the distribution zip
+      - name: Build Distribution
+        run: ./gradlew distZip
 
-    - name: Debug: List build directory
-      run: ls -R kross/build
-
-    - name: Verify ZIP File
-      run: test -f kross/build/distributions/kross.zip || echo "ZIP file not found!"
-
-    - name: Upload Distribution Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: distribution
-        path: kross/build/distributions/kross.zip
+      # Upload the zip file as an artifact
+      - name: Upload Distribution Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: distribution
+          path: kross/build/distributions/*.zip
