--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,4 +1,4 @@
-name: Develop Branch Build
+name: Publish Develop Build
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - develop
 
 jobs:
-  build-and-test:
+  build-and-release:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,14 +19,25 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-
       - name: Build and Test
         run: |
           ./gradlew test
           ./gradlew assemble
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
+      - name: Create GitHub Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: develop-build
-          path: kross/build/distributions/*.zip
+          tag_name: develop-latest
+          release_name: "Develop Build"
+          draft: false
+          prerelease: true
+
+      - name: Upload Artifact to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create-release.outputs.upload_url }}
+          asset_path: build/distributions/*.zip
+          asset_name: develop-latest.zip
+          asset_content_type: application/zip
