created GH secret for release upload

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Create GitHub Release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
           tag_name: develop-latest
           release_name: "Develop Build"
@@ -38,6 +38,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create-release.outputs.upload_url }}
-          asset_path: build/distributions/*.zip
+          asset_path: kross/build/distributions/*.zip
           asset_name: develop-latest.zip
           asset_content_type: application/zip
