--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -25,6 +25,7 @@ jobs:
           ./gradlew assemble
 
       - name: Create GitHub Release
+        id: create_release # Add a unique ID to this step
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
@@ -37,7 +38,7 @@ jobs:
       - name: Upload Artifact to Release
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ steps.create-release.outputs.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # Use the step ID to reference the output
           asset_path: kross/build/distributions/*.zip
           asset_name: develop-latest.zip
           asset_content_type: application/zip
