--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -24,8 +24,24 @@ jobs:
           ./gradlew test
           ./gradlew assemble
 
+      - name: Delete Existing Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        run: |
+          existing_release=$(gh release view develop-latest --json id --jq '.id' || echo "")
+          if [ -n "$existing_release" ]; then
+            echo "Deleting existing release..."
+            gh release delete develop-latest --yes
+          fi
+          existing_tag=$(git tag -l develop-latest || echo "")
+          if [ -n "$existing_tag" ]; then
+            echo "Deleting existing tag..."
+            git tag -d develop-latest
+            git push origin :refs/tags/develop-latest
+          fi
+
       - name: Create GitHub Release
-        id: create_release # Add a unique ID to this step
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
@@ -38,7 +54,7 @@ jobs:
       - name: Upload Artifact to Release
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # Use the step ID to reference the output
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: kross/build/distributions/*.zip
           asset_name: develop-latest.zip
           asset_content_type: application/zip
