--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -59,6 +59,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: kross/build/distributions/*.zip
+          asset_path: kross/build/distributions/kross.zip
           asset_name: develop-latest.zip
           asset_content_type: application/zip
